--- a/css/content.sass
+++ b/css/content.sass
@@ -102,6 +102,13 @@ main
 							li
 								display: block
 								margin-left: -15px
+								width: 290px
+								background-image: linear-gradient(to left, transparent, transparent 50%, #f4f750 50%, #f4f750)
+								background-position: 100% 0
+								background-size: 200% 100%
+								transition: all .25s ease-in
+								&:hover
+									background-position: 0% 0
 							.butt
 								padding-top: 15px
 								border-top: 1px solid #c2c52e
@@ -135,6 +142,13 @@ main
 								max-width: 100%
 								width: 49%
 								vertical-align: top
+								width: 290px
+								background-image: linear-gradient(to left, transparent, transparent 50%, #f4f750 50%, #f4f750)
+								background-position: 100% 0
+								background-size: 200% 100%
+								transition: all .25s ease-in
+								&:hover
+									background-position: 0% 0
 
 					.menu__popup.search
 						input
@@ -145,8 +159,8 @@ main
 							border: none
 							border-bottom: 1px solid #a4a629
 						.grid
-							min-height: 298px
-							max-width: 100%
+							min-height: 320px
+							max-width: 101%
 							.grid-item
 								display: block
 								height: auto
@@ -157,6 +171,13 @@ main
 								ul
 									li
 										height: auto !important
+										width: 100%
+										background-image: linear-gradient(to left, transparent, transparent 50%, #f4f750 50%, #f4f750)
+										background-position: 100% 0
+										background-size: 201% 100%
+										transition: all .25s ease-in
+										&:hover
+											background-position: 0% 0
 					.search-img-two
 						width: 30px
 						position: absolute
