--- a/css/content.sass
+++ b/css/content.sass
@@ -106,7 +106,7 @@ main
 								background-image: linear-gradient(to left, transparent, transparent 50%, #f4f750 50%, #f4f750)
 								background-position: 100% 0
 								background-size: 200% 100%
-								transition: all .25s ease-in
+								transition: background .25s ease-in
 								&:hover
 									background-position: 0% 0
 							.butt
@@ -146,7 +146,7 @@ main
 								background-image: linear-gradient(to left, transparent, transparent 50%, #f4f750 50%, #f4f750)
 								background-position: 100% 0
 								background-size: 200% 100%
-								transition: all .25s ease-in
+								transition: background .25s ease-in
 								&:hover
 									background-position: 0% 0
 
@@ -175,7 +175,7 @@ main
 										background-image: linear-gradient(to left, transparent, transparent 50%, #f4f750 50%, #f4f750)
 										background-position: 100% 0
 										background-size: 201% 100%
-										transition: all .25s ease-in
+										transition: background .25s ease-in
 										&:hover
 											background-position: 0% 0
 					.search-img-two
