--- a/css/header.sass
+++ b/css/header.sass
@@ -7,27 +7,20 @@ header
 	height: 48px
 	background: #161a1b
 	font-family: 'Roboto', sans-serif
-	.wrap-access-type
+	.access-type
 		font-family: 'PT Sans', sans-serif
-		width: 180px
+		width: 480px
 		height: 48px
-		input
-			width: 150px
-			height: 48px
-			display: none
-			background: transparent
-			border: none
-			margin-left: 20px
-			color: #71797c
-		.access-type
-			width: 480px
-			height: 48px 
-			margin-left: 30px
-			float: left
-			line-height: 48px
-			font-weight: 500
-			// text-align: center
-			span 
+		margin-left: 30px
+		float: left
+		line-height: 48px
+		font-weight: 500
+		ul
+			list-style: none
+			margin: 0
+			padding: 0
+			li
+				display: inline-block
 				a
 					color: #71797c
 					text-decoration: none
@@ -86,4 +79,4 @@ header
 				.font-plus
 					padding-left: 10px
 					border-left: #929c9f solid 1px
-			
+	
