--- a/css/footer.sass
+++ b/css/footer.sass
@@ -13,7 +13,7 @@ footer
 		margin-left: 60px
 		padding-bottom: 55px
 		ul
-			margin-left: 0px!important
+			margin-left: 0px
 			margin-right: calc((100% - 920px)/6 )
 		.helpful-link
 			display: inline-block
@@ -94,7 +94,3 @@ footer
 				font-size: 0.8rem
 				font-weight: 400
 				color: #4b5153
-
-
-
-
